riscv: fail to build after JDK-8290840

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 20
    • Affects Version/s: 20
    • Component/s: hotspot
    • None
    • 20
    • b10
    • riscv
    • linux

        JDK-8290840 moved icache_flush from os_linux_riscv.cpp to icache_riscv.cpp, and we got 2 icache_flush there, and then caused a compilation error of "overloaded function with no contextual type information" in generate_icache_flush, which simply used the function name as a function address.

        We put icache_flush in os files because it was just a linux implementation, and we saw some test failures on Hifive Unleashed when using the "portable" version of __builtin__clear_cache provided by compilers about 2 years ago. The problem doesn't exist anymore, so we can revert to the previous implementation of just using the builtin clear cache function.

              Assignee:
              Yadong Wang
              Reporter:
              Yadong Wang
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: