8291947: riscv: fail to build after JDK-8290840